sidebar video width bug fix on firefox.

--- a/themes/starkers/style.css
+++ b/themes/starkers/style.css
@@ -381,6 +381,7 @@ ul#recent_posts li {
 	border-bottom: solid 21px #56b2b7;
 	padding-top:25px;
 	display:inline-block;
+	max-width:100%;
 }
 
 ul#recent_posts li:first-child {
